examples/issues/issue_1478/expected/apps_v1_ingress_web-private-dev.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: web-private-dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: my-service-name-dev
          servicePort: 3333
        path: /*
