examples/issues/issue_1478/expected/networking.k8s.io_v1beta1_ingress_web-private-dev.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-private-dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: my-service-name-dev
          servicePort: 3333
        path: /*
