examples/issues/issue_1478/expected/~g_v1_service_my-service-name-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service
  name: my-service-name-dev
